merubah isi dari about me

--- a/index.html
+++ b/index.html
@@ -58,11 +58,27 @@
                 </div>
             </div>
             <div class="row justify-content-center fs-5 text-center">
-                <div class="col-md-4">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores numquam exercitationem modi quo deleniti saepe provident fugit reiciendis voluptates cupiditate?</p>
+                <div class="col-md-5">
+                    <p><strong><i>Web Developer | English</i></strong><br>I am a web developer with a strong passion for building visually engaging, functional websites and applications. Skilled in both front-end and back-end development, I craft user-friendly
+                        interfaces using HTML, CSS, and JavaScript, while also managing server-side logic and databases to ensure seamless functionality. I thrive on collaborating with designers and project teams to bring concepts to life, and I’m dedicated
+                        to continuous learning to stay current with evolving tools and frameworks. My approach balances creativity, technical precision, and a commitment to delivering secure, high-performance solutions that enhance user experience.
+                        <br>
+                        <br><strong><i>Indonesian</i></strong><br>Saya adalah seorang web developer yang memiliki passion dalam membangun situs web dan aplikasi yang fungsional dan menarik secara visual. Terampil dalam pengembangan front-end dan back-end,
+                        saya merancang antarmuka yang ramah pengguna menggunakan HTML, CSS, dan JavaScript, serta mengelola logika server dan basis data untuk memastikan fungsionalitas yang lancar. Saya senang berkolaborasi dengan desainer dan tim proyek
+                        untuk mewujudkan konsep, serta berkomitmen untuk terus belajar agar tetap mengikuti perkembangan alat dan kerangka kerja terbaru. Pendekatan saya menggabungkan kreativitas, ketelitian teknis, dan komitmen untuk memberikan solusi
+                        yang aman, berkinerja tinggi, dan meningkatkan pengalaman pengguna.
+                    </p>
                 </div>
-                <div class="col-md-4">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, suscipit deserunt ex illum, doloremque placeat consequuntur sint, numquam quo atque et aspernatur repudiandae totam magnam?</p>
+                <div class="col-md-5">
+                    <p><strong><i>Content Creator | English</i></strong><br>I am a passionate content creator dedicated to crafting engaging and meaningful content that inspires and educates audiences on digital platforms. With a strong ability to develop
+                        creative ideas that align with current trends and audience needs, I produce various types of content—from visuals and videos to written pieces—optimized with SEO techniques and hashtags for greater accessibility. I also have experience
+                        in analyzing content performance, allowing me to continuously improve strategies to achieve a greater impact. For me, content creation is a blend of creativity, data, and the ability to build strong connections with the audience.
+                        <br>
+                        <br><strong><i>Indonesian</i></strong><br>Saya adalah seorang content creator yang bersemangat menciptakan konten menarik dan bermakna untuk menginspirasi serta mengedukasi audiens di platform digital. Dengan kemampuan mengembangkan
+                        ide-ide kreatif yang relevan dengan tren dan kebutuhan audiens, saya memproduksi berbagai jenis konten—dari gambar, video, hingga tulisan—yang dioptimalkan dengan teknik SEO dan hashtag agar lebih mudah diakses. Saya juga berpengalaman
+                        menganalisis performa konten, sehingga dapat terus meningkatkan strategi untuk menghasilkan dampak yang lebih besar. Bagi saya, content creation adalah perpaduan antara kreativitas, data, dan kemampuan membangun hubungan yang kuat
+                        dengan audiens.
+                    </p>
                 </div>
 
             </div>
