--- a/index.html
+++ b/index.html
@@ -139,6 +139,41 @@
                 </div>
             </div>
         </div>
+
+        <section id="my-keyboards">
+            <div class="container">
+                c:\Users\Safrial Alva\Downloads\Nebula-V3.png c:\Users\Safrial Alva\Downloads\Retro-V2.png c:\Users\Safrial Alva\Downloads\Arcane-Blast-V1.png
+                <div class="row text-center mb-3">
+                    <div class="col">
+                        <h2>My Keyboards</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="keyboard-box">
+                            <h4 class="keyboard-name">Arcane Blast V1</h4>
+                            <img src="img/keyboard/Arcane-Blast-V1.png" alt="Arcane Blast V1" class="keyboard-img">
+                            <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="keyboard-box">
+                            <h4 class="keyboard-name">Nebula V3</h4>
+                            <img src="img/keyboard//Nebula-V3.png" alt="Nebula V3" class="keyboard-img">
+                            <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="keyboard-box">
+                            <h4 class="keyboard-name">Retro V2</h4>
+                            <img src="img/keyboard/Retro-V2.png" alt="Retro V2" class="keyboard-img">
+                            <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L40,160C80,160,160,160,240,133.3C320,107,400,53,480,74.7C560,96,640,192,720,202.7C800,213,880,139,960,112C1040,85,1120,107,1200,112C1280,117,1360,107,1400,101.3L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
     </section>
     <!-- AKHIR PROJECTS -->
@@ -331,6 +366,17 @@
                     console.log('Success!', response);
                 })
                 .catch(error => console.error('Error!', error.message))
+        });
+    </script>
+
+    <!-- VANNILA TILT JS -->
+    <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
+    <script type="text/javascript">
+        VanillaTilt.init(document.querySelectorAll('.keyboard-box'), {
+            max: 35,
+            speed: 1000,
+            scale: 1.1,
+            glare: true,
         });
     </script>
 </body>
